src/assets/css/editor.css
html, body {
  padding     : 0px;
  margin      : 0px;
  overflow    : hidden;
  font-size   : 12px;
  font-weight : 100 !important;
  color       : #333333;
  background  : #ffffff;
}
.left {
  float: left;
}
.right {
  float: right;
}
.panel {
  overflow-y: auto;
  padding: 5px;
}
.wide {
  width: 100%;
}
.grabbing {
  cursor: url(../img/closedhand.cur) 8 8, move;
}
.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.clearfix {
  display: inline-block;
}
html[xmlns] .clearfix {
  display: block;
}
* html .clearfix {
  height: 1%;
}
button, .button {
  border-style: solid;
  border-width: 0;
  cursor: pointer;
  line-height: normal;
  margin: 0 0 1.25rem;
  position: relative;
  text-decoration: none;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-radius: 0;
  display: inline-block;
  padding: 2px 5px;
  background-color: #008CBA;
  border-color: #007095;
  color: #ffffff;
  padding-top: 0.375rem;
  padding-right: 1.75rem;
  padding-bottom: 0.4375rem;
  padding-left: 1.75rem;
  transition: background-color 300ms ease-out; 
}
button:hover, .button:hover {
  background-color: #007095;
  color: #ffffff;
}
button.secondary, .button.secondary {
  background-color: #e7e7e7;
  border-color: #b9b9b9;
  color: #333333;
}
button.secondary:hover, .button.secondary:hover {
  background-color: #b9b9b9;
  color: #333333;
}
button.success, .button.success {
  background-color: #43AC6A;
  border-color: #368a55;
  color: #ffffff;
}
button.success:hover, .button.success:hover {
  background-color: #368a55;
}
button.success:hover, .button.success:hover {
  color: #ffffff;
}
button.alert, .button.alert {
  background-color: #f04124;
  border-color: #cf2a0e;
  color: #ffffff;
}
button.alert:hover, .button.alert:hover {
  background-color: #cf2a0e;
}
button.alert:hover, .button.alert:hover {
  color: #ffffff;
}

.canvas-overlay {
  /* A dark translucent div that covers just the game canvas (and should not block the canvas). */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color:#000000;
  opacity: 0.2;  /* Active by default. */
  pointer-events: none;
}

.focused .canvas-overlay {
  /* Deactivate overlay. */
  opacity: 0.0;
}

.highlight {
  background-color: #fff568;
}

/* ================================*/
/* FORM                            */
/* ================================*/
form {
  text-align: left;
}
form .row {
  margin: 0.5em 0px 1em 0px;
}
form .row label {
  text-align: left;
  display: block;
  padding-bottom: 2px;
}
form .row input, form .row textarea, form .row select { 
  display: block;
  width: 95%;
  color: #111;
  padding: 3px;
}

.inner-topbar {
  top: 25px;
  position: absolute;
  text-align: left;
  margin: 0px;
  border-bottom: 1px solid #aaaaaa;
  left: 250px;  /* Required b/c the sidebar on the left will otherwise hide some of the text. */
  width: calc(100% - 500px);
  background-color: #ffffff;
}

/* ================================*/
/* TREE TABS                       */
/* ================================*/
.tree-tabs-bar {
  width: 100%;
  background-color: #dadada;
  border-bottom: #aaaaaa solid 1px;
  display: inline-block;
}
.tree-tabs-container {
  display: inline-block;
  max-width: calc(100% - 45px);
}
.tree-tabs {
  display: flex;
  flex-direction: row;
  overflow-x: auto;
  overflow-y: hidden;
  border-right: #aaaaaa solid 1px;
}

.tree-tabs .tab {
  font-size: 14px;
  background-color: #dddddd;
  border-right: #777777 solid 1px;
  border-bottom: #777777 solid 1px;
  padding: 5px 10px;
  padding-top: 11px;
  flex: 0 0 auto;
  cursor: pointer;
}

.tree-tabs .tab.selected {
  background-color: #ffffff;
  border-bottom: #008CBA solid 4px;
}

.tree-tabs .tab .close {
  position: relative;
  bottom: 2px;
  font-size: 20px;
  width: 20px;
  height: 20px;
  padding: 0px;
  margin-bottom: 0px;
  margin-left: 5px;
  color: #333333;
  background-color: inherit;
  transition: none;
}

.tree-tabs .tab .close:hover {
  background-color: #fcfcfc;
}

.tree-tabs .tab.selected .close:enabled:hover {
  background-color: #e6e6e6;
}

.tree-tabs .tab .close:disabled {
  color: #999999;
}

.tree-tabs .new-tree, .tree-tabs-bar .new-tree {
  padding: 5px 10px;
  margin: 5px 5px;
  flex: 0 0 auto;
}
.tree-tabs .tab .save-marker {
  color: #f04124;
  padding-right: 3px;
}
.tree-tabs .tab-insert-slot {
  border-right: #e7c800 solid 3px;
}
/* ================================*/

/* ================================*/
/* FILENAME DISPLAY                */
/* ================================*/
.filename-display {
  padding: 5px;
  font-size: 25px;
  height: 25px;
  background-color: #ffffff;
  overflow: hidden;
  display: inline-block;
}

.filename-display .save-status-display {
  color: #f04124;
  float: left;
  padding-right: 6px;
}

.filename-display .treename-display {
  float: left;
  padding-right: 12px;
}

.filename-display .path-display {
  padding: 0px 4px;
  float: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #aaaaaa;
  direction: rtl;
}
/* ================================*/

/* ================================*/
/* COLLAPSIBLE LIST                */
/* ================================*/
button.collapsible-list {
  padding: 0px;
  margin: 0px 5px 0px 0px;
  width: 20px;
  height: 20px;
  font-size: 1.5em;
  color: #333333;
  background-color: #ffffff;
  float: left;
}

div.collapsible-list {
  margin: 5px 0px;
}
div.collapsible-list-items {
  padding-left: 5px;
  border-left: #868686 solid 1px;
  overflow-y: hidden;
  overflow-x: visible;
  transition: max-height ease-out 0.5s;
}

div.collapsible-list-items.hidden {
  max-height: 0px !important;
}
/* ... */

